fix the problem when link not work break the page is more widen

--- a/source/css/_partial/copyright.styl
+++ b/source/css/_partial/copyright.styl
@@ -1,8 +1,18 @@
 .copyright
-	font-size:1.3rem
-	margin:1rem 0
-	line-height:2rem
-	a
-		color: #2d96bd
+{
+	font-size:1.3rem;
+	margin:1rem 0;
+	line-height:2rem;
+	padding:1rem;
+  background-color:#f9f9f9;
+}
+.copyright a{
+	color: #2d96bd;
+}
 
-		
+.copyright blockquote
+{
+  border-left: 5px solid #ff1700;
+  word-break: break-word;
+
+  }
